One minor grammar fix

--- a/modules.html
+++ b/modules.html
@@ -43,7 +43,7 @@
         <tr bgcolor="#FFFFFF">
           <td width="20%"><b>I2cDevice</b></td>
           <td width="%20"><code>&lt;I2cDevice name="name" port="" /&gt;</code></td>
-          <td>A <code>I2cDevice</code> communicates with the DIM via I2C</td>
+          <td>An <code>I2cDevice</code> communicates with the DIM via I2C</td>
         </tr>
       </tbody>
     </table>
