Add ColorSensor, IRSeekerV3, and TouchSensor

--- a/modules.html
+++ b/modules.html
@@ -36,6 +36,11 @@
           <th align="left" colspan="3"><font size="+2" color="#FFFFFF"><b>Device Interface Module</b></font></th>
         </tr>
         <tr bgcolor="#FFFFFF">
+          <td width="20%"><b>Color Sensor</b></td>
+          <td width="%20"><code>&lt;ColorSensor name="name" port="" /&gt;</code></td>
+          <td>A <code>ColorSensor</code> distinguishes between colors</td>
+        </tr>
+        <tr bgcolor="#FFFFFF">
           <td width="20%"><b>Gyro</b></td>
           <td width="%20"><code>&lt;Gyro name="name" port="" /&gt;</code></td>
           <td>A <code>Gyro</code> provides rotation feedback</td>
@@ -46,9 +51,19 @@
           <td>An <code>I2cDevice</code> communicates with the DIM via I2C</td>
         </tr>
         <tr bgcolor="#FFFFFF">
+          <td width="20%"><b>IR Seeker V3</b></td>
+          <td width="%20"><code>&lt;IRSeekerV3 name="name" port="" /&gt;</code></td>
+          <td>An <code>IRSeekerV3</code> provides data about received IR signals</td>
+        </tr>
+        <tr bgcolor="#FFFFFF">
           <td width="20%"><b>Optical Distance Sensor</b></td>
           <td width="%20"><code>&lt;OpticalDistanceSensor name="name" port="" /&gt;</code></td>
           <td>An <code>OpticalDistanceSensor</code> communicates with the DIM via I2C</td>
+        </tr>
+        <tr bgcolor="#FFFFFF">
+          <td width="20%"><b>Touch Sensor</b></td>
+          <td width="%20"><code>&lt;TouchSensor name="name" port="" /&gt;</code></td>
+          <td>A <code>TouchSensor</code> senses whether a momentary switch is pressed or not pressed</td>
         </tr>
       </tbody>
     </table>
