--- a/modules.html
+++ b/modules.html
@@ -1,3 +1,16 @@
+<style>
+code
+{
+  color:#000;
+  font-weight: normal;
+}
+td
+{
+  color:#000;
+  font-weight: normal;  
+}
+</style>
+
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head></head>
   <body>
