--- a/modules.html
+++ b/modules.html
@@ -16,7 +16,7 @@ td
   <body>
     <table width="100%" cellspacing="0" cellpadding="3" border="1" summary="">
       <tbody>
-        <tr bgcolor="#369">
+        <tr bgcolor="#4999FF">
           <th align="left" colspan="3"><font size="+2" color="#FFFFFF"><b>Modules</b></font></th>
         </tr>
         <tr bgcolor="#FFFFFF">
@@ -45,7 +45,7 @@ td
     
     <table width="100%" cellspacing="0" cellpadding="3" border="1" xmlns="http://www.w3.org/1999/xhtml" summary="">
       <tbody xmlns="http://www.w3.org/1999/xhtml">
-        <tr bgcolor="#369">
+        <tr bgcolor="#4999FF">
           <th align="left" colspan="3"><font size="+2" color="#FFFFFF"><b>Device Interface Module</b></font></th>
         </tr>
         <tr bgcolor="#FFFFFF">
