--- a/modules.html
+++ b/modules.html
@@ -74,7 +74,7 @@ td
         <tr bgcolor="#FFFFFF">
           <td width="20%"><b>Optical Distance Sensor</b></td>
           <td width="%20"><code>&lt;OpticalDistanceSensor name="name" port="" /&gt;</code></td>
-          <td>An <code>OpticalDistanceSensor</code> communicates with the DIM via I2C</td>
+          <td>An <code>OpticalDistanceSensor</code> measures distance or how dark or light a surface is</td>
         </tr>
         <tr bgcolor="#FFFFFF">
           <td width="20%"><b>Touch Sensor</b></td>
