Add all known Modern Robotics parts

--- a/modules.html
+++ b/modules.html
@@ -20,6 +20,9 @@ td
     <table width="100%" cellspacing="0" cellpadding="3" border="1" summary="">
       <tbody>
         <tr bgcolor="#4999FF">
+          <th align="left" colspan="3"><font size="+2" color="#FFFFFF"><b>Old Modern Robotics Electronics</b></font></th>
+        </tr>
+        <tr bgcolor="#4999FF">
           <th align="left" colspan="3"><font size="+2" color="#FFFFFF"><b>Modules</b></font></th>
         </tr>
         <tr bgcolor="#FFFFFF">
@@ -42,12 +45,6 @@ td
           <td width="%20"><code>&lt;ServoController name="name" serialNumber="########"&gt;&lt;/ServoController&gt;</code></td>
           <td>A <code>ServoController</code> controls up to six servos</td>
         </tr>
-      </tbody>
-    </table>
-    <p></p>
-    
-    <table width="100%" cellspacing="0" cellpadding="3" border="1" xmlns="http://www.w3.org/1999/xhtml" summary="">
-      <tbody xmlns="http://www.w3.org/1999/xhtml">
         <tr bgcolor="#4999FF">
           <th align="left" colspan="3"><font size="+2" color="#FFFFFF"><b>Device Interface Module</b></font></th>
         </tr>
@@ -80,6 +77,21 @@ td
           <td width="20%"><b>Touch Sensor</b></td>
           <td width="%20"><code>&lt;TouchSensor name="name" port="" /&gt;</code></td>
           <td>A <code>TouchSensor</code> senses whether a momentary switch is pressed or not pressed</td>
+        </tr>
+        <tr bgcolor="#4999FF">
+          <th align="left" colspan="3"><font size="+2" color="#FFFFFF"><b>Motor Controller</b></font></th>
+        </tr>
+        <tr bgcolor="#FFFFFF">
+          <td width="20%"><b>Motor</b></td>
+          <td width="%20"><code>&lt;Motor name="name" port="" /&gt;</code></td>
+          <td>A <code>Motor</code> provides rotational movement</td>
+        </tr><tr bgcolor="#4999FF">
+          <th align="left" colspan="3"><font size="+2" color="#FFFFFF"><b>Servo Controller</b></font></th>
+        </tr>
+        <tr bgcolor="#FFFFFF">
+          <td width="20%"><b>Servo</b></td>
+          <td width="%20"><code>&lt;Servo name="name" port="" /&gt;</code></td>
+          <td>A <code>Servo</code> provides rotational movement, usually slower and in a fixed range</td>
         </tr>
       </tbody>
     </table>
